Setup for calculator project

--- a/projects/calculator/calculator.html
+++ b/projects/calculator/calculator.html
@@ -8,7 +8,37 @@
   </head>
   <body>
     <div id="calc-body">
-      
+      <div id="output">0</div>
+
+      <div id="buttons" class="row">
+        <div class="column">
+          <button id="AC">AC</button>
+          <button id="seven">7</button>
+          <button id='four'>4</button>
+          <button id='one'>1</button>
+          <button id="zero">0</button>
+        </div>
+        <div class="column">
+          <button></button>
+          <button id="eight">8</button>
+          <button id="five">5</button>
+          <button id="two">2</button>
+        </div>
+        <div class="column">
+          <button id="percent">%</button>
+          <button id="nine">9</button>
+          <button id="six">6</button>
+          <button id="three">3</button>
+          <button id="decimal">.</button>
+        </div>
+        <div class="column">
+          <button id="divide">/</button>
+          <button id="multiply">*</button>
+          <button id="subtract">-</button>
+          <button id="add">+</button>
+          <button id="equals">=</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
