created session and break incrementors/decrementors and reset button

--- a/projects/pomodoro/clock.html
+++ b/projects/pomodoro/clock.html
@@ -14,12 +14,12 @@
                 <p id="break-length">5</p>
                 <button id="break-decrement" onclick="breakDecrement()">-</button>
             </div>
-            <div id="timer">
+            <div id="time">
                 <p id="timer-label">Session</p>
                 <p id="time-left">25:00</p>
                 <div id="buttons">
                     <button id="start_stop">Start</button>
-                    <button id="reset">Reset</button>
+                    <button id="reset" onclick="reset()">Reset</button>
                 </div>
             </div>
             <div id="session">
