--- a/projects/pomodoro/clock.html
+++ b/projects/pomodoro/clock.html
@@ -18,7 +18,7 @@
                 <p id="timer-label">Session</p>
                 <p id="time-left">25:00</p>
                 <div id="buttons">
-                    <button id="start_stop">Start</button>
+                    <button id="start_stop" onclick="startStop()">Start</button>
                     <button id="reset" onclick="reset()">Reset</button>
                 </div>
             </div>
