fcc tests passing

--- a/projects/markdown/public/index.html
+++ b/projects/markdown/public/index.html
@@ -20,10 +20,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link href="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
+    
     <title>FCC Markdown</title>
   </head>
   <body>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
