--- a/projects/pomodoro/2/clock.html
+++ b/projects/pomodoro/2/clock.html
@@ -21,7 +21,7 @@
         <div id='main-display'>25:00</div>
         <div id='main-buttons'>
           <button id='main-break' onclick='mainBreak()'>T/B</button>
-          <button id='start' onclick='start()'>Start</button>
+          <button id='start' onclick='startTimer()'>Start</button>
           <button id='reset' onclick='reSet()'>Reset</button>
         </div>
       </div>
