completed timer logic

--- a/projects/pomodoro/2/clock.html
+++ b/projects/pomodoro/2/clock.html
@@ -22,6 +22,7 @@
         <div id='main-buttons'>
           <button id='main-break' onclick='mainBreak()'>T/B</button>
           <button id='start' onclick='startTimer()'>Start</button>
+          <button id='stop' onclick='stopTimer()'>Stop</button>
           <button id='reset' onclick='reSet()'>Reset</button>
         </div>
       </div>
