text input sharing info

--- a/projects/pomodoro/2/drum_machine.html
+++ b/projects/pomodoro/2/drum_machine.html
@@ -5,8 +5,21 @@
         <link rel='stylesheet' type='text/css' href='drum_machine.css' />
         <script src='drum_machine.js'></script>
     </head>
+    <!-- QWEASDZXC -->
     <body>
         <div id='title'>Drum Machine</div>
-        
+        <div id='drum-machine'>
+            <div id='display'></div>
+            <input id='out' type='text' oninput="myfunc(this.value)" />
+            <div id='drumQ' class='drum-pad'>Q</div>
+            <div id='drumW' class='drum-pad'>W</div>
+            <div id='drumE' class='drum-pad'>E</div>
+            <div id='drumA' class='drum-pad'>A</div>
+            <div id='drumS' class='drum-pad'>S</div>
+            <div id='drumD' class='drum-pad'>D</div>
+            <div id='drumZ' class='drum-pad'>Z</div>
+            <div id='drumX' class='drum-pad'>X</div>
+            <div id='drumC' class='drum-pad'>C</div>
+        </div>
     </body>
 </html>
