set up sound element

--- a/projects/pomodoro/3/clock.html
+++ b/projects/pomodoro/3/clock.html
@@ -18,6 +18,7 @@
             <div id='display'>
                 <div id='timer-label'>Session</div>
                 <div id='time-left'>25:00</div>
+                <audio id='beep' src="analog-watch-alarm_daniel-simion.wav"></audio>
                 <button id='start_stop' onclick='startStop()'>play</button>
                 <button id='reset' onclick='reSet()'>reset</button>
             </div>
